fixed spacing issues with mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,7 +43,7 @@ body {
 .background-quote {
   font-family: 'Syne Mono', monospace;
   color: #fff;
-  font-size: 2rem; }
+  font-size: 1.2rem; }
 
 .u-center-text {
   text-align: center !important; }
@@ -62,12 +62,12 @@ body {
 
 html {
   font-size: 62.5%; }
-  @media only screen and (max-width: 56.25em) {
-    html {
-      font-size: 62.5%; } }
   @media only screen and (max-width: 75em) {
     html {
       font-size: 72.5%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 62.5%; } }
   @media only screen and (min-width: 112.5em) {
     html {
       font-size: 75%; } }
@@ -147,15 +147,13 @@ html {
   align-content: flex-start;
   justify-self: center;
   text-align: center;
-  width: 80%;
-  height: 60vh;
+  width: auto;
   margin: 2rem auto 1rem;
   border-radius: 25px;
   background-color: white; }
   .sectionAbout__heading {
     color: #555; }
   .sectionAbout__text {
-    width: 75%;
     margin: 0 auto;
     justify-self: center;
     font-size: 2rem;
@@ -335,7 +333,7 @@ html {
   height: auto; }
   @media only screen and (max-width: 56.25em) {
     .work-section {
-      height: 610rem; } }
+      height: 6800px; } }
 
 .btn, .btn:link, .btn:visited {
   text-decoration: none;
@@ -419,7 +417,7 @@ html {
   background-attachment: fixed;
   background-position: 50% 7%;
   background-repeat: no-repeat;
-  background-size: contain; }
+  background-size: cover; }
   .footer_2 {
     background-image: linear-gradient(to right bottom, rgba(241, 160, 160, 0.8), rgba(148, 7, 7, 0.8)), url("../../src/images/books2.jpg");
     background-attachment: fixed;
@@ -440,7 +438,7 @@ html {
     top: 50%;
     width: 100%;
     text-align: center;
-    font-size: 3rem; }
+    font-size: 2rem; }
 
 .contact-info {
   height: auto; }
