--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -23,6 +23,6 @@ body {
 .background-quote {
     font-family: 'Syne Mono', monospace;
     color: $color-white;
-    font-size: 2rem;
+    font-size: 1.2rem;
 }
 
