--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -13,7 +13,7 @@
         background-attachment: fixed;
         background-position: 50% 7%;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
 
     &_2 {
         background-image: linear-gradient(
@@ -49,7 +49,7 @@
             top: 50%;
             width: 100%;
             text-align: center;
-            font-size: 3rem;
+            font-size: 2rem;
         }
 
 }
