--- a/src/sass/components/_work.scss
+++ b/src/sass/components/_work.scss
@@ -258,7 +258,7 @@
     
 
     @include respond(tab-port) {
-        height: 610rem;
+        height: 6800px;
     }
 }
 
